kdebindings (4:4.4.5-3) UNRELEASED; urgency=low

  [ Pino Toscano ]
  * python-kde4-dev needs to depend on python-kde4, otherwise pykdeuic4.py
    does not work. (Closes: #592286)
  * Few touches to the packages descriptions.
    - ... including the libsmokekutils3 one. (Closes: #592280)

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 09 Aug 2010 22:43:03 +0200

kdebindings (4:4.4.5-2) unstable; urgency=medium

  [ Modestas Vainius ]
  * Point debian/control Vcs fields to the new Git repository.

  [ Pino Toscano ]
  * Fix typo in description of libsmokekparts3. (Closes: #589904)

  [ Sune Vuorela ]
  * Only build the kpythonfactoryplugin on default python version, else
    it ends up a bit random which one is actually used when built parallel.
    Closes: #591422
  * Medium urgency due to rc bugfix.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 07 Aug 2010 00:01:00 +0200

kdebindings (4:4.4.5-1) unstable; urgency=low

  [ Modestas Vainius ]
  * New upstream release.
     - Fix ruby marshalling. Closes: #586672
  * Bump kde-sc-dev-latest build dependency to 4:4.4.5.

  [ Sune Vuorela ]
  * Fix libsmokekfile description. Closes: 586440
  * Fix descriptions

 -- Sune Vuorela <sune@debian.org>  Sun, 18 Jul 2010 01:30:43 +0200

kdebindings (4:4.4.4-2) unstable; urgency=low

  * Added missing dependency on libqt4-ruby1.8. (Closes: #584651)
  * Fixed description of libsmokektexteditor3. (Closes: #585686)

 -- Michael Meskes <meskes@debian.org>  Tue, 15 Jun 2010 19:02:36 +0200

kdebindings (4:4.4.4-1) unstable; urgency=low

  * New upstream release.

  [ Pino Toscano ]
  * Fix typo in description of libplasma2.0-cil. (Closes: #581404)

  [ Sune Vuorela ]
  * Fix qt-dotnet config file. Thanks Dave Page. (Closes: 583112)
  * Update email address.

  [ Modestas Vainius ]
  * Bump pkg-kde-tools build dependency to (>= 0.9.2) for HTML_INSTALL_DIR
    switch, 3.0 (quilt) source format support and