@@ -6,6 +6,12 @@ kdebindings (4:4.4.5-3) UNRELEASED; urgency=low
   * Few touches to the packages descriptions.
     - ... including the libsmokekutils3 one. (Closes: #592280)
 
+  [ Modestas Vainius ]
+  * Move python2.5 dependencies to python-kde4 Suggests (Closes: #595532).
+    Even if python-kde4 still provides python2.5 bindings, Python 2.5 is no
+    longer a default and hence it is not a pre-requisite for the package to be
+    useful on standard Debian install.
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 09 Aug 2010 22:43:03 +0200
 
 kdebindings (4:4.4.5-2) unstable; urgency=medium
